usr/src/tools/smatch/src/check_shift_to_zero.c
@@ -44,7 +44,7 @@ static void match_binop2(struct expression *expr)
 {
 	struct expression *left;
 	struct expression *tmp;
-	sval_t mask, shift;
+	sval_t value, mask, shift;
 
 	if (expr->op != SPECIAL_RIGHTSHIFT)
 		return;
@@ -58,7 +58,15 @@ static void match_binop2(struct expression *expr)
 
 	if (!get_value(expr->right, &shift))
 		return;
-	if (!get_value(left->right, &mask))
+
+	/*
+	 * The LHS for expr is assumed to be (mask & value), make sure
+	 * we do have both hands.
+	 */
+	if (!get_implied_value(left->left, &value))
+		return;
+
+	if (!get_implied_value(left->right, &mask))
 		return;
 
 	if (mask.uvalue >> shift.uvalue)
